--- a/ClanBattlesLanding/Views/Home/Index.cshtml
+++ b/ClanBattlesLanding/Views/Home/Index.cshtml
@@ -912,7 +912,7 @@
             <div class="vc_column-inner ">
                 <div class="wpb_wrapper">
                     <div class="edgtf-elements-holder   edgtf-two-columns  edgtf-responsive-mode-1024 ">
-                        <div class="edgtf-eh-item    " style="background-image: url(https://c8.alamy.com/comp/H3CC2M/portrait-of-happy-young-people-in-a-meeting-looking-at-camera-and-H3CC2M.jpg)"
+                        <div class="edgtf-eh-item    " style="background-image: url(https://scontent.flim6-1.fna.fbcdn.net/v/t1.15752-9/s2048x2048/46503190_1089726784532318_4101682716729147392_n.jpg?_nc_cat=103&_nc_eui2=AeE7CYnvSP4RxqkLy0sWQGMXXKl5FH1irIcfoA2fzvncUwpc6wc8yioi4-q4e2fAYb6UUEsMXGUHLuzvHyOw3ysKNv3AhuT1FEOHodG1E6tfqg&_nc_ht=scontent.flim6-1.fna&oh=63903d2a196b09b3899f3b8639208b00&oe=5C7C54CA)"
                              data-item-class="edgtf-eh-custom-5145" data-769-1024="315px 0" data-681-768="315px 0" data-680="115px 0">
                             <div class="edgtf-eh-item-inner">
                                 <div class="edgtf-eh-item-content edgtf-eh-custom-5145">
@@ -927,7 +927,7 @@
                                     <div class="edgtf-section-title-holder  edgtf-st-standard " style="padding: 0 0px;text-align: left">
                                         <div class="edgtf-st-inner">
                                             <h2 class="edgtf-st-title">
-                                                NUESTRO EQUIPO<br /> Tim Squad
+                                                NUESTRO EQUIPO<br /> Team Squad
                                             </h2>
                                             <p class="edgtf-st-text" style="margin-top: 23px">
                                                 Grupo de profesionales todavia no egresados <br> Desarrollamos aplicaciones moviles en android , IOS <br>
@@ -961,11 +961,11 @@
                         <div class="wpb_wrapper">
                             <div class="edgtf-video-button-holder  edgtf-vb-has-img">
                                 <div class="edgtf-video-button-image">
-                                    <img width="913" height="516" src="~/Content/wp-content/uploads/2018/06/h2-video-img-1.jpg" class="attachment-full size-full"
-                                         alt="a" srcset="http://playerx.edge-themes.com/wp-content/uploads/2018/06/h2-video-img-1.jpg 913w, http://playerx.edge-themes.com/wp-content/uploads/2018/06/h2-video-img-1-300x170.jpg 300w, http://playerx.edge-themes.com/wp-content/uploads/2018/06/h2-video-img-1-768x434.jpg 768w, http://playerx.edge-themes.com/wp-content/uploads/2018/06/h2-video-img-1-800x452.jpg 800w"
+                                    <img width="913" height="516" src="https://i.ytimg.com/vi/ye1dz08KF_U/hqdefault.jpg" class="attachment-full size-full"
+                                         alt="a" srcset="https://i.ytimg.com/vi/ye1dz08KF_U/hqdefault.jpg 913w, https://i.ytimg.com/vi/ye1dz08KF_U/hqdefault.jpg 800w"
                                          sizes="(max-width: 913px) 100vw, 913px" />
                                 </div>
-                                <a class="edgtf-video-button-play" href="https://www.youtube.com/watch?v=9hJkzd6QdW0" data-rel="prettyPhoto[video_button_pretty_photo_557]">
+                                <a class="edgtf-video-button-play" href="https://www.youtube.com/watch?v=ye1dz08KF_U" data-rel="prettyPhoto[video_button_pretty_photo_557]">
                                     <span class="edgtf-video-button-play-inner">
                                         <i class="fas fa-play"></i>
                                     </span>
